# TikTok-Challenge-2025

./: Autoencoder.ipynb  BERT_model.ipynb  EDA.ipynb  Isolation_forest.ipynb  README.md  autoencoder_reviews_parquet.py  documentation.ipynb  fuse_anomally_scores.ipynb  main.py  notebook (for viewing).ipynb  notebook.ipynb  pyproject.toml  reviews_with_meta_perfile2000.parquet
